@@ -23,6 +23,13 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-04-15  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
+  * Fixed DrawImage() to properly handle affine image transforms.
+
+2002-04-13  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+  * magick/magick.c (MagickToMime): New method to return the MIME
+    media type corresponding to a specified magick tag.
+
 2002-04-12  Leonard Rosenthol  &lt;leonardr@lazerware.com&gt;
   * Fixed a bug in writing layer names in PSD files
 
